--- a/app/views/about.html
+++ b/app/views/about.html
@@ -15,11 +15,11 @@
       </p>
     </div>
     <div class="colContainer center">
-      <h2>GQ Shot</h2>
+      <h2>Hero Shot</h2>
       <div class="gqimage">
         <img src="../images/us.jpg"alt="">
       </div>
-      <p>* Neither party has ever appeared in GQ Magazine.</p>
+      <p>* Neither party claims to be a super hero.  Nor do they deny it.</p>
     </div>
   </div>
 </div>
