Menu now position:fixed. Updated Quick Look Dashboard in hidden nav.

--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -4,9 +4,10 @@
       <h3 class="headline">
       Dashboard: To get started, visit the menu.
       </h3>
-      <h2>
+      <h1>
       Stats for <span class="green">{{ client.name }}</span>
-      </h2>
+      </h1>
+      <!-- <h4>Age: <span class="green">{{ client.age }}</span> Weight: <span class="green">{{ client.weight }}</span></h4> -->
       <div class="dashboardSectionTitle">
         <h3>
         Questionaire Results *FEATURE NOT AVAILABLE. Coming soon.
