--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -216,11 +216,14 @@ input {
 }
 .navicon-button {
     cursor: pointer;
+    background-color: $black;
     display: inline-block;
-    float: right;
     opacity: .8;
     padding: 2.0625rem 1.5rem;
     position: relative;
+    position: fixed;
+    float: right;
+    right: 0;
     transition: $duration/2;
     user-select: none;
     .navicon:before,
@@ -299,7 +302,7 @@ input {
 
 header {
     @include cf();
-
+  position: relative;
     color: $green;
     margin-bottom: 2em;
     // font-family: $title;
@@ -364,19 +367,20 @@ header {
     // background-color: $black;
     .navDashboard {
         @include col(1/2);
-
         padding-left: .5em;
         h2 {
             border-bottom: 2px solid $purple;
         }
         .dashItem {
+          @include col(1/2, $cycle: 2);
             background-color: $purple;
             font-family: $title;
             font-size: 1.5em;
-            height: 4em;
-            margin: 1em auto;
+            margin-bottom: 1em;
+            // height: 4em;
+            // margin: 1em auto;
             text-align: center;
-            width: 90%;
+            // width: 90%;
         }
     }
     ul {
@@ -508,9 +512,11 @@ input[type=radio]:checked + label {
   @include cf();
   @include col(1/3, $cycle: 3, $gutter: 2);
   border: 3px solid $green;
-  padding: 0 0 1em 0;
+  padding: 0 0 1em;
   height: 17em;
   margin-bottom: 1em;
+  // border-radius: 50%;
+  overflow: hidden;
   h4 {
     text-align: center;
     background-color: $green;
