Fixed about page.  Additional fixes to the hidden menu icon and dashboard.

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,25 +1,25 @@
-<div class="contentWrapper">
+<div class="contentContainer">
   <div class="container">
-    <div class="colContainer">
-      <h2>Developers:</h2>
-      <h4>
-      soarFitness.app was developed by a Certified Personal Trainer &amp; Web Developer team&hellip;who also happen to be married to each other.
-      </h4>
-      <h3>her:</h3>
-      <p>
-        Seeking to dispel Health &amp; Fitness fact from myth, Alyssa became a NASM&reg; Certified Personal Trainer in 2014.  Her desire is to free people from enslavement to the number on the scale, and instead set achievable goals based on lean body mass and desired body fat percentage.  She just wants to people to love themselves and seek wellness. Her specialty is Nutrition &amp; Weight Loss.  You can read her stuff <a href="http://www.pbandhwellness.com" target="_blank"><span class="green">here</span></a>.
-      </p>
-      <h3>him:</h3>
-      <p>
-        Paul has been putting code up on the Web since 2013.  His love of Fitness, Code, and the Web has led him to develop Websites for several Certified Personal Trainers, Health &amp; Medical Clinics, and the development of another Fitness app for High Intensity Interval Training.  His next goal is to follow in his wife's footsteps and become a Certified Personal Trainer.  You can check his stuff out <a href="http://www.paulhirschi.com" target="_blank"><span class="green">here</span></a>.
-      </p>
-    </div>
-    <div class="colContainer center">
-      <h2>Hero Shot</h2>
-      <div class="gqimage">
-        <img src="../images/us.jpg"alt="">
+      <div class="colContainer">
+        <h2>Developers:</h2>
+        <h4>
+        soarFitness.app was developed by a Certified Personal Trainer &amp; Web Developer team&hellip;who also happen to be married to each other.
+        </h4>
+        <h3>her:</h3>
+        <p>
+          Seeking to dispel Health &amp; Fitness fact from myth, Alyssa became a NASM&reg; Certified Personal Trainer in 2014.  Her desire is to free people from enslavement to the number on the scale, and instead set achievable goals based on lean body mass and desired body fat percentage.  She just wants to people to love themselves and seek wellness. Her specialty is Nutrition &amp; Weight Loss.  You can read her stuff <a href="http://www.pbandhwellness.com" target="_blank"><span class="green">here</span></a>.
+        </p>
+        <h3>him:</h3>
+        <p>
+          Paul has been putting code up on the Web since 2013.  His love of Fitness, Code, and the Web has led him to develop Websites for several Certified Personal Trainers, Health &amp; Medical Clinics, and the development of another Fitness app for High Intensity Interval Training.  His next goal is to follow in his wife's footsteps and become a Certified Personal Trainer.  You can check his stuff out <a href="http://www.paulhirschi.com" target="_blank"><span class="green">here</span></a>.
+        </p>
       </div>
-      <p>* Neither party claims to be a super hero.  Nor do they deny it.</p>
-    </div>
+        <div class="colContainer center">
+          <h3>Dramatic Magazine Cover Shot</h3>
+          <div class="gqimage">
+            <img src="../images/us.jpg"alt="">
+          </div>
+          <p>* Neither party has ever appeared in a magazine.</p>
+        </div>
   </div>
 </div>
